# safaribooks

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  _retrieve_cookies_legacy.py  _safaribooks_legacy.py  _test_normalize_chapter_legacy.py  pyproject.toml  requirements.txt  retrieve_cookies.py  safaribooks.py  setup.cfg  test_normalize_chapter.py
.devcontainer/: .zshrc  DISCOVER-DEPS.md  README.md  SETUP.md  TOOLS.md  custom-setup.sh  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature-request.md
.github/workflows/: main.yml
assets/readme/: demo.tape
docs/: CONTRIBUTORS.md  how-it-works.html  mini.html
docs/archive/plans/: 01-cherry-pick-upstream-pr.md  02-migrate-api-v1-to-v2.md  05-upstream-pr-evaluation.md
docs/plans/: 03-unified-cookie-auth-system.md  04-image-quality-apple-books-fixes.md
src/safaribooks/: __init__.py
src/safaribooks/cli/: __init__.py  auth.py  fetch.py  ui.py
src/safaribooks/core/: __init__.py  api.py  assets.py  book.py  chapters.py  config.py  constants.py  cookies.py  downloader.py  epub.py  exceptions.py  log.py  models.py  rate_limit.py  retry.py  search.py
tests/cli/: test_auth.py  test_fetch.py  test_ui.py
tests/core/: test_assets.py  test_book.py  test_chapters.py  test_config.py  test_cookies.py  test_downloader.py  test_epub.py  test_log.py  test_models.py  test_rate_limit.py  test_search.py
tests/integration/: test_download_pipeline.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/concepts/: api-migration.md  architecture.md  epub-structure.md  rate-limiting.md  retry-logic.md
website/docs/examples/: custom-image-settings.md  docker-usage.md  multiple-books.md  playlist-download.md  single-book.md  title-search.md
website/docs/getting-started/: authentication.md  first-download.md  index.md  installation.md
website/docs/guides/: docker.md  downloading-books.md  environment-variables.md  image-quality.md  kindle-optimization.md  playlists.md  session-resilience.md
website/docs/reference/: cli-commands.md  configuration.md  exceptions.md  models.md
website/docs/troubleshooting/: common-errors.md  cookie-expiry.md  image-problems.md  ssl-issues.md
website/src/components/: FeatureCards.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx
