[project]
name = "safaribooks"
version = "0.1.0"
description = "Download O'Reilly books as EPUB files."
authors = [{ name = "Joe Black", email = "me@joeblack.nyc" }]
readme = "README.md"
keywords = ["python", "oreilly", "safaribooks", "epub", "ebook"]
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.28",
    "tenacity>=9.1",
    "lxml>=4.1.1",
    "html5lib>=1.1",
    "Pillow",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
browser = ["browser-cookie3"]

[project.scripts]
safari = "safaribooks.cli:app"

[project.urls]
"Bug Tracker" = "https://github.com/joeblackwaslike/safaribooks/issues"
Homepage = "https://github.com/joeblackwaslike/safaribooks"
Repository = "https://github.com/joeblackwaslike/safaribooks"

[dependency-groups]
dev = [
    "deptry~=0.23.1",
    "ipython~=9.6.0",
    "mypy~=1.18.2",
    "pre-commit~=4.3.0",
    "pytest~=8.4.2",
    "pytest-asyncio>=0.26",
    "respx>=0.22",
    "pytest-mock~=3.15.1",
    "ruff~=0.14.0",
    "tox~=4.31.0",
    "tox-uv~=1.29.0",
    "wemake-python-styleguide~=1.4.0",
    "pytest-timeout>=2.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
files = ["src"]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unreachable = true

[tool.pytest.ini_options]
# pytest config: http://doc.pytest.org/en/latest/customize.html
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = ["safaribooks.cli", "safaribooks.cli.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["lxml.*", "html5lib.*", "browser_cookie3.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.deptry]
extend_default = true

[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # maccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simpify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "A005",   # allow to shadow stdlib and builtin module names
    "COM812", # trailing comma, conflicts with `ruff format`
    # Different doc rules that we don't really care about:
    "D100",
    "D104",
    "D106",
    "D203",
    "D212",
    "D401",
    "D404",
    "D405",
    "E501",    # line too long
    "E731",    # do not assign lambda
    "ISC001",  # implicit string concat conflicts with `ruff format`
    "ISC003",  # prefer explicit string concat over implicit concat
    "PLR09",   # we have our own complexity rules
    "PLR2004", # do not report magic numbers
    "PLR6301", # do not require classmethod / staticmethod when self not used
    "TRY003",  # long exception messages from `tryceratops`
]
external = [ "WPS" ]

[tool.ruff.lint.flake8-import-conventions]
banned-from = [ "ast" ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
    "F403", # star imports
]
"tests/**/*.py" = [
  "D101", # docstrings on public classes
  "D102", # docstrings on public methods
  "D103", # docstrings on public functions
  "S101", # asserts
  "S105", # hardcoded passwords
  "S108", # probable insecure usage of temp file
  "S404", # subprocess calls are for tests
  "S603", # do not require `shell=True`
  "S607", # partial executable paths
]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
docstring-code-format = false
